Add support for Quilt's Loom fork, update CI Loom versions
Closes #7.